refactor: align DCQL matching with inji-openid4vp and OpenID4VP 1.0
Signed-off-by: Madhuravas reddy <madhu@mosip.io>